--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="/bootatrap_tutorial/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/bootatrap_tutorial/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -43,7 +43,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact</a>
+                    <a class="nav-link" href="/bootatrap_tutorial/contact.html">Contact</a>
                 </li>
 
             </ul>
