--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="https://arunim313.github.io/bootatrap_tutorial/">iCoder</a>
+        <a class="navbar-brand" href="/bootatrap_tutorial/">iCoder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/bootatrap_tutorial/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -42,7 +42,7 @@
                         <a class="dropdown-item" href="#">Write for us</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
 
